Mapping /lib/modules so nfs kernel can load modules on the host.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     volumes:
       - /exports:/exports
+      - /lib/modules:/lib/modules
     ports:
       - '2049:2049'
       - '111:111/udp'
